--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
                         <div class="sate" ></div>
                         <div class="sate" ></div>
                     </div>
+                     <div class="thisbox">
+                        <div class="sate" ></div>
+                        <div class="sate" ></div>
+                        <div class="sate occupied" ></div>
+                        <div class="sate" ></div>
+                    </div>
+                    <div class="thisbox">
+                        <div class="sate" ></div>
+                        <div class="sate" ></div>
+                        <div class="sate occupied" ></div>
+                        <div class="sate" ></div>
+                    </div>
+                    <div class="thisbox">
+                        <div class="sate" ></div>
+                        <div  class="sate" ></div>
+                        <div  class="sate occupied" ></div>
+                        <div  class="sate" ></div>
+                    </div>
+                    <div class="thisbox">
+                        <div  class="sate" ></div>
+                        <div  class="sate" ></div>
+                        <div  class="sate" ></div>
+                        <div  class="sate occupied" ></div>
+                    </div>
                     <div class="thisbox">
                         <div class="sate" ></div>
                         <div class="sate occupied" ></div>
